--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@
 
 buildscript {
   repositories {
-    jcenter()
+    mavenCentral()
     google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.4'
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    classpath 'com.android.tools.build:gradle:4.2.2'
+//    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3.'
     classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     // NOTE: Do not place your application dependencies here; they belong
@@ -17,15 +17,17 @@ buildscript {
 
 allprojects {
   repositories {
-    jcenter()
+    mavenCentral()
     google()
+
+    maven { url "https://jitpack.io" }
   }
 }
 
 ext {
-  permissionsDispatcherVersion = '2.4.0'
+  permissionsDispatcherVersion = '4.8.0'
   supportLibraryVersion = '28.0.0-rc02'
-  rxPermissionsVersion = '0.9.4@aar'
+  rxPermissionsVersion = '0.12'
   rxJavaVersion = '2.1.10'
   rxAndroidVersion = '2.0.2'
 }
