--- a/simplecropview/build.gradle
+++ b/simplecropview/build.gradle
@@ -8,12 +8,12 @@ dependencies {
 }
 
 android {
-  compileSdkVersion 28
-  buildToolsVersion '28.0.2'
+  compileSdkVersion 30
+  buildToolsVersion '30.0.3'
 
   defaultConfig {
     minSdkVersion 14
-    targetSdkVersion 28
+    targetSdkVersion 30
     versionCode 26
     versionName "1.1.8"
     consumerProguardFiles 'proguard-rules.pro'
@@ -28,7 +28,7 @@ def file = project.rootProject.file('local.properties')
 if (!file.exists()) return
 
 apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
+//apply plugin: 'com.jfrog.bintray'
 
 group = 'com.isseiaoki'
 version = '1.1.8'
@@ -37,24 +37,24 @@ def gitUrl = 'https://github.com/IsseiAoki/SimpleCropView.git'
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
-bintray {
-
-  user = properties.getProperty("bintray.user")
-  key = properties.getProperty("bintray.apikey")
-
-  configurations = ['archives'] //When uploading configuration files
-  pkg {
-    repo = 'maven'
-    name = 'SimpleCropView'
-    desc = 'A simple image cropping library for Android.'
-    websiteUrl = siteUrl
-    issueTrackerUrl = 'https://github.com/IsseiAoki/SimpleCropView/issues'
-    vcsUrl = gitUrl
-    licenses = ['MIT']
-    labels = ['android']
-    publicDownloadNumbers = true
-  }
-}
+//bintray {
+//
+//  user = properties.getProperty("bintray.user")
+//  key = properties.getProperty("bintray.apikey")
+//
+//  configurations = ['archives'] //When uploading configuration files
+//  pkg {
+//    repo = 'maven'
+//    name = 'SimpleCropView'
+//    desc = 'A simple image cropping library for Android.'
+//    websiteUrl = siteUrl
+//    issueTrackerUrl = 'https://github.com/IsseiAoki/SimpleCropView/issues'
+//    vcsUrl = gitUrl
+//    licenses = ['MIT']
+//    labels = ['android']
+//    publicDownloadNumbers = true
+//  }
+//}
 
 install {
   repositories.mavenInstaller {
@@ -105,6 +105,6 @@ artifacts {
   archives sourcesJar
 }
 
-task findConventions << {
-  println project.getConvention()
-}
+//task findConventions << {
+//  println project.getConvention()
+//}
